# basketworld

./: .env.example  .env.mlflow.example  .gitignore  BLOG_POST.md  CNN_IMPLEMENTATION_SUMMARY.md  CNN_POLICY_CLARIFICATION.md  LICENSE.md  MLFLOW_S3_SETUP_FINAL.md  PER_PLAYER_SKILL_HEATMAPS.md  QUICK_START_CNN.md  README.md  SUMMARY_PER_PLAYER_SKILLS.md  WEB_APP_DEFENDER_PRESSURE_DISPLAY.md  mlflow_logger.py  pyproject.toml  render_comparison_demo.py  render_fixed_scale_demo.py  requirements.txt  setup.py  start_mlflow.sh  start_mlflow_s3.sh  start_mlflow_with_profile.sh  stop_mlflow.sh  test_cnn_implementation.py  visualize_skill_heatmaps.py  visualize_spatial_obs.py
analytics/: assist_skill_delta.py  elo_evolution.py  evaluate.py  heatmap.py  intent_disc_eval_batch.py  intent_disc_single_intent_eval.py  intent_pca.py  shotchart.py  trajectory_accumulation.py
app/: README.md
basketworld/: __init__.py
basketworld_jax/: __init__.py
benchmarks/: __init__.py  common.py  jax_kernel.py  jax_phase_a_optim.py  jax_phase_a_policy.py  jax_phase_a_train.py  policy_bridge_baseline.py  rollout_baseline.py  sbx_phase_a.py  sbx_phase_a_rollout_torch.py  sbx_phase_a_torch.py
blog/: post1.md  post2.md  post3.md
configs/: start_templates_v1.json  start_templates_v2.json
docs/: MLFLOW_S3_IMPLEMENTATION.md  PROJECT_CREDENTIALS_SUMMARY.txt  current_model_architecture.md  future_experiments.md  jax_env_benchmark_plan.md  jax_full_migration_plan.md  mlflow_project_credentials.md  mlflow_s3_quickstart.md  mlflow_s3_setup.md  mlflow_s3_summary.txt  n_player_curriculum_plan.md  (+12 more)
(+234 files in other folders)
